// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1682670990921,
      "mascota": "Hook",
      "propietario": "Juan",
      "sintomas": "Solo Duerme",
      "telefono": "812934567",
    },
  ],
}
`;

exports[`Probar la clase de citas Eliminar cita 1`] = `
Citas {
  "citas": [],
}
`;

exports[`Probar la clase de citas actualizar cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1682670990921,
      "mascota": "Nuevo Nombre",
      "propietario": "Juan",
      "sintomas": "Solo Duerme",
      "telefono": "812934567",
    },
  ],
}
`;
